# Manim-Vision

./: .gitignore  README.md  manual_test.py  pyproject.toml
manim_vision/: __init__.py  core.py  exceptions.py  overlay.py  semantic.py
manim_vision/geometry/: __init__.py  adapter.py  engine.py  registration.py
manim_vision/proxy/: __init__.py  mobject_proxy.py  scene_proxy.py
manim_vision/solver/: __init__.py  constraint.py
manim_vision/telemetry/: __init__.py  dispatcher.py  paths.py  schema.py
media/videos/manual_test/480p15/partial_movie_files/DirectOverlapScene/: partial_movie_file_list.txt
media/videos/manual_test/480p15/partial_movie_files/NoCollisionScene/: partial_movie_file_list.txt
tests/: __init__.py  conftest.py  test_adapter.py  test_core.py  test_engine.py  test_overlay.py  test_proxy.py  test_semantic.py  test_solver.py  test_telemetry.py
