[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manim-vision"
version = "0.1.3"
description = "Manim Vision: spatial collision intelligence for Manim scenes."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
keywords = ["manim", "animation", "collision", "geometry", "spatial", "shapely"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "manim>=0.18.0",
    "shapely>=2.0.0",
    "wrapt>=1.16.0",
    "numpy>=1.24.0",
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["manim_vision"]

[tool.hatch.build.targets.sdist]
include = ["/manim_vision", "/README.md", "/pyproject.toml", "/LICENSE", "/tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
